@@ -63,12 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 475)
-(Parent-Version lpmud 3-3 474)
-(Version-Log "The TLS key and certfile can be specified on the commandline.")
+(Project-Version lpmud 3-3 476)
+(Parent-Version lpmud 3-3 475)
+(Version-Log "The configuration script now looks for OpenSSL as well as GnuTLS.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 09 Aug 2003 21:41:53 -0600")
+(Checkin-Time "Sat, 09 Aug 2003 22:45:35 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -106,24 +106,24 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.538 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.539 644))
   (HISTORY (lpmud/f/49_HISTORY 1.331 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.85 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.86 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.35 644))
-  (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.7 644))
+  (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.8 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.21 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.75 644))
-  (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.7 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.76 644))
+  (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.8 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
-  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.43 744))
+  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.44 744))
   (src/settings/native (lpmud/c/9_native 1.6 744))
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
   (src/settings/alatia (lpmud/j/27_alatia 1.5 744))
@@ -199,7 +199,7 @@
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.58 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.46 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.47 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.73 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
@@ -271,7 +271,7 @@
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.1 644))
-  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.2 644))
+  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.3 644))
   (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.3 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
@@ -334,7 +334,7 @@
   ;; Host: BeOS
   (src/hosts/be/socketinc.h (lpmud/e/32_socketinc. 1.3 644))
   (src/hosts/be/set-version (lpmud/c/b/10_set-versio 1.1 744))
-  (src/hosts/be/machine.h (lpmud/e/33_machine.h 1.14.1.6 644))
+  (src/hosts/be/machine.h (lpmud/e/33_machine.h 1.14.1.7 644))
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.38 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
